# ProgrammingPrinciplesAndPracticeUsingQt

./: CMakeLists.txt  Colormap.cpp  GUI.cpp  GUI.h  GUI_private.h  Graph.cpp  Graph.h  Point.h  Programming_Qt.sln  Programming_Qt.vcxproj  Programming_qt.vcxproj  README.md  Simple_window.cpp  Simple_window.h  UserGuide.odt  Window.cpp  Window.h  main.cpp
PPP/: GUI.h  GUI_private.h  Graph.h  Image_private.h  Point.h  Simple_window.h  Window.h  std_lib_facilities.h
examples/kitchensink/: CMakeLists.txt
examples/kitchensink_local_library/: CMakeLists.txt
library_build_tests/kitchensink/: CMakeLists.txt
library_build_tests/kitchensink_local_library/: CMakeLists.txt  main.cpp
library_builds/: PPPQTVS.sln  README.txt
library_builds/PPPQTVS/: PPPQTVS.vcxproj
